feat: commit codes

--- a/packages/@som/email/index.html
+++ b/packages/@som/email/index.html
@@ -1,1 +1,4 @@
-<h1 class="text-[16px] font-bold underline text-[#123456] flex h-full "></h1>
+<h1 class="text-[13px] font-bold underline text-pink-500 flex h-full ">
+    Hello world!
+</h1>
+<h2 class="text-lg">aaaaaa</h2>
